--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="fixed-top hwrap">
-                <!-- <div class="hmove">
-                <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
+                <div class="hmove">
+                <!-- <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
                 </div> -->
                 <div class="hitem"><a href="https://XARIIA.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&id=233939e4f6" target="_blank">Join Our Email List</a></div> 
-                <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
-                </div>
+                <!-- <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
+                </div> -->
                 <div class="hitem"><a href="https://XARIIA.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&id=233939e4f6" target="_blank">Join Our Email List</a></div> 
                 </div>
 
