--- a/index.html
+++ b/index.html
@@ -108,17 +108,16 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
-            <div class="fixed-top hwrap">
+            <!-- <div class="fixed-top hwrap">
                 <div class="hmove">
-                <!-- <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
-                </div> -->
+                <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
+                </div>
                 <div class="hitem"><a href="https://XARIIA.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&id=233939e4f6" target="_blank">Join Our Email List</a></div> 
-                <!-- <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
-                </div> -->
+                <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
+                </div>
                 <div class="hitem"><a href="https://XARIIA.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&id=233939e4f6" target="_blank">Join Our Email List</a></div> 
                 </div>
-
-            </div>
+            </div> -->
             <div class="container px-5 logomid">
                 <a href="#page-top" class="navbar-brand fw-bold"><img src="assets/logo.png" alt="XARIIA logo" class="img-fluid"></a>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
@@ -232,12 +231,14 @@
                         <div class="textblack mb-4">
                             <h2 class="display-6 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold textresponsive">
-                                XARIIA's vision is to streamline custom fashion,  is achieved by :<br>
-                                Simplifying the process.<br>
-                                Reducing costs by shortening the time needed for a design.<br>
-                                Creating designs instantly and allowing customers to see the custom design before purchasing.<br>
-                                Providing each customer with a unique and custom design.<br>
-                                Reducing waste through on-demand production and promoting digital fashion that is 96% more sustainable.
+                                XARIIA's vision is to streamline custom fashion,  is achieved by :
+                                <ul class="textleft">
+                                    <li>Simplifying the process.</li>
+                                    <li>Reducing costs by shortening the time needed for a design.</li>
+                                    <li>Creating designs instantly and allowing customers to see the custom design before purchasing.</li>
+                                    <li>Providing each customer with a unique and custom design.</li>
+                                    <li>Reducing waste through on-demand production and promoting digital fashion that is 96% more sustainable.</li>
+                                </ul>
                             </p>    
                         </div>
                         <!-- <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" /> -->
