--- a/index.html
+++ b/index.html
@@ -328,13 +328,13 @@
             </div>
         </section>
 
-        <section>
+        <!-- <section>
             <div class="container px-5">
                 <h2 class="display-6 lh-1 mb-4">Demo</h2>
                 <iframe src="https://www.youtube.com/embed/d6gAJ5y5YyY">
                 </iframe>
             </div>
-        </section>
+        </section> -->
 
 
         <section class="bg-light">
