--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
             </div> -->
             <div class="container px-5 logomid">
-                <a href="#page-top" class="navbar-brand fw-bold"><img src="assets/logo.png" alt="XARIIA logo" class="img-fluid"></a>
+                <a href="#page-top" class="navbar-brand fw-bold"><img src="assets/XARIIALogojusttext.png" alt="XARIIA logo" class="img-fluid"></a>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                     <span class="d-flex align-items-center">
                         <span class="small">Subscribe</span>
@@ -132,11 +132,13 @@
         <header class="masthead">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-7">
+                    <div class="col-lg-8">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-6 lh-2 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class=" fw-bold mb-5 textresponsive">XARIA is the world's first immersive-commerce platform with an AI-enabled print designer for the garments sold on the platform.             
+                            <h1 class="display-6 lh-2 mb-3">Unique Print Designs Made Just For You.</h1>
+                            <p class=" fw-bold mb-5 textresponsive">XARIIA is the world's first AI-enabled print designer for fashion.<br>
+                                <br>
+                                XARIIA automates the custom print design process for garments by instantly generating custom print designs based on each user's design preferences and applying them to the customer's selected garment.
                             </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
@@ -169,7 +171,7 @@
 
                         </div>
                     </div>
-                    <div class="col-lg-5 slideshow-container">
+                    <div class="col-lg-4 slideshow-container">
                         <div class="mySlides fade">
                             <div class="numbertext"></div>
                             <img class="img-fluid sliderimg" src="assets/product1.png">
@@ -227,17 +229,17 @@
             <aside class="text-center bg-gradient-primary-to-secondary">
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-8">
+                    <div class="col-xl-12">
                         <div class="textblack mb-4">
                             <h2 class="display-6 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold textresponsive">
                                 XARIIA's vision is to streamline custom fashion,  is achieved by :
-                                <ul class="textleft">
-                                    <li>Simplifying the process.</li>
-                                    <li>Reducing costs by shortening the time needed for a design.</li>
-                                    <li>Creating designs instantly and allowing customers to see the custom design before purchasing.</li>
-                                    <li>Providing each customer with a unique and custom design.</li>
-                                    <li>Reducing waste through on-demand production and promoting digital fashion that is 96% more sustainable.</li>
+                                <ul class="textcenter textresponsive fw-bold">
+                                    - Simplifying the custom print design process.<br>
+                                    - Reducing costs by shortening the time needed for a design.<br>
+                                    - enhancing UX by instantly creating designs and allowing customers to view them before purchasing.<br>
+                                    - Providing each customer with a unique and custom design.<br>
+                                    - Reducing waste through on-demand production and promoting digital fashion that is 96% more sustainable.<br>
                                 </ul>
                             </p>    
                         </div>
@@ -248,9 +250,9 @@
         </aside>
 
         <!-- App features section-->
-        <section id="features">
+        <section class="sectionfeatures">
             <div class="container px-5">
-                <h2 class="display-6 lh-1 mb-4">Features & Technology
+                <h2 class="display-6 lh-1 mb-4 textcenter">Features & Technology
                 </h2>
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
@@ -340,7 +342,7 @@
         <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-8">
                         <h2 class="display-6 lh-1 mb-4">Products & Use Cases </h2>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Physical Garments : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br><br>
@@ -348,7 +350,7 @@
                             Phygital Garments / NFT : Physically + Digitally.
                         </p>    
                     </div>
-                    <div class="col-sm-10 col-md-8 col-lg-6">
+                    <div class="col-sm-10 col-md-8 col-lg-4">
                         <div class="px-sm-0"><img class=" img-fluid" src="assets/usecase.png" alt="a t-shirt with a hawaian print" /></div>
                     </div>
                 </div>
