--- a/index.html
+++ b/index.html
@@ -338,26 +338,6 @@
             </div>
         </section> -->
 
-
-        <section class="bg-light">
-            <div class="container px-5">
-                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-8">
-                        <h2 class="display-6 lh-1 mb-4">Products & Use Cases </h2>
-                        <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Physical Garments : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br><br>
-                            Digital Garments / NFT : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br><br>
-                            Phygital Garments / NFT : Physically + Digitally.
-                        </p>    
-                    </div>
-                    <div class="col-sm-10 col-md-8 col-lg-4">
-                        <div class="px-sm-0"><img class=" img-fluid" src="assets/usecase.png" alt="a t-shirt with a hawaian print" /></div>
-                    </div>
-                </div>
-
-                <!-- <div class="mb-6 mb-lg-12 text-center text-lg-start"><a href="https://xariia.net/" target="_blank"><h4 class="font-alt margintop1rem">Try Out Our Alpha Release</h4></a></div> -->
-        </section>
-
         <!-- <section id="features">
             <div class="container px-5">
                 <h2 class="display-6 lh-1 mb-4">The Team
@@ -409,17 +389,17 @@
         </section> -->
 
         <!-- Basic features section-->
-         <!-- <section class="bg-light">
+         <section class="bg-light">
             <div class="container px-5">
-                <h2 class="display-5 lh-1 mb-4">How Does It Work ?</h2>
+                <h2 class="display-6 lh-1 mb-4">How Does It Work ?</h2>
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-6">
-                        <h2 class="display-5 lh-1 mb-4"> 1. You Select A Product</h2>
+                    <div class="col-12 col-lg-7">
+                        <h2 class="display-6 lh-1 mb-4"> 1. Select A Garment</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Our platform will provide you with a wide variety of physical, digital, and phygital cloths (clothes that are both digital and physical, connected by a digital ID, and worn in both the physical and virtual worlds) for your custom design to go on.
+                            Our platform will provide a wide variety of physical, digital, and phygital garments for the custom design to go on.
                         </p>                   
                      </div>
-                    <div class="col-xs-10 col-md-6 col-lg-6">
+                    <div class="col-xs-10 col-md-6 col-lg-5">
                         <div class="px-sm-0"><img class="img-fluid" src="assets/productselector.png" alt="a white t-shirt with no print"/></div>
                     </div>
                 </div>
@@ -428,14 +408,13 @@
         <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-6">
-                        <h2 class="display-5 lh-1 mb-4">2. You Select Your Design Preferences</h2>
+                    <div class="col-12 col-lg-7">
+                        <h2 class="display-6 lh-1 mb-4">2. Select Design Preferences</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Following your product selection, the platform will direct you to a page where you can choose the size (for physical products), design preferences from the user interface, such as trend, favorite color, and occasion, as well as factors like age and gender on which to base the design.<br>
-                            This will allow our AI to generate a design that is specific to your choices.                                     
+                            Following garment selection, the platform will direct the customer to a page where they can select the size (for physical garments) and the custom design preferences, such as trend and color, for the design to be based on.<br>
                         </p>
                     </div>
-                    <div class="col-sm-10 col-md-8 col-lg-6">
+                    <div class="col-sm-10 col-md-8 col-lg-5">
                         <div class="px-sm-0"><img class="img-fluid" src="assets/productnoprint.png" alt="a  picture of a white shirt, next to it is the user interface" /></div>
                     </div>
                 </div>
@@ -444,20 +423,38 @@
         <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-6">
-                        <h2 class="display-5 lh-1 mb-6">3. You See A Mockup Of the Product</h2>
+                    <div class="col-12 col-lg-7">
+                        <h2 class="display-6 lh-1 mb-4">3. View Mockup & Purchase</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Once you tap the Generate button, our AI will instantly generate a design and apply it to the 3D model of the product you've chosen in real-time, allowing you to see the product before you buy it.<br>
-                            Your generated custom pattern print design & product will be automatically minted onto the blockchain and saved there, enabling you to apply it to numerous products in the future.  
+                            When the customer clicks the generate button, our AI will generate a custom print and apply it to the 3D model of the garment for real-time viewing, which will lead to a purchase.
                         </p>                    
                     </div>
-                    <div class="col-sm-10 col-md-8 col-lg-6">
+                    <div class="col-sm-10 col-md-8 col-lg-5">
                         <div class="px-sm-0"><img class=" img-fluid" src="assets/productprint.png" alt="a  picture of a shirt with a hawaian print next to it is the user interface" /></div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="bg-light">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                    <div class="col-12 col-lg-8">
+                        <h2 class="display-6 lh-1 mb-4">Products & Use Cases </h2>
+                        <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
+                            Physical Garments : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br><br>
+                            Digital Garments / NFT : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br><br>
+                            Phygital Garments / NFT : Physically + Digitally.
+                        </p>    
+                    </div>
+                    <div class="col-sm-10 col-md-8 col-lg-4">
+                        <div class="px-sm-0"><img class=" img-fluid" src="assets/usecase.png" alt="a t-shirt with a hawaian print" /></div>
+                    </div>
+                </div>
+
+                <!-- <div class="mb-6 mb-lg-12 text-center text-lg-start"><a href="https://xariia.net/" target="_blank"><h4 class="font-alt margintop1rem">Try Out Our Alpha Release</h4></a></div> -->
+        </section>
+
+        <!-- <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
