--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
                             <h1 class="display-6 lh-2 mb-3">Unique Print Designs Made Just For You.</h1>
                             <p class=" fw-bold mb-5 textresponsive">XARIIA is the world's first AI-enabled print designer for fashion.<br>
                                 <br>
-                                XARIIA automates the custom print design process for garments by instantly generating custom print designs based on each user's design preferences and applying them to the customer's selected garment.
-                            </p>
+                                XARIIA automates the custom print design process for garments by instantly generating designs based on each user's preferences and applying them to the customer's chosen garment.                            </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
                                 Our mission is to revolutionize custom fashion.<br>
@@ -395,7 +394,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
                         <h2 class="display-6 lh-1 mb-4"> 1. Select A Garment</h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
+                        <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Our platform will provide a wide variety of physical, digital, and phygital garments for the custom design to go on.
                         </p>                   
                      </div>
@@ -410,7 +409,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
                         <h2 class="display-6 lh-1 mb-4">2. Select Design Preferences</h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
+                        <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Following garment selection, the platform will direct the customer to a page where they can select the size (for physical garments) and the custom design preferences, such as trend and color, for the design to be based on.<br>
                         </p>
                     </div>
@@ -425,7 +424,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
                         <h2 class="display-6 lh-1 mb-4">3. View Mockup & Purchase</h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
+                        <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             When the customer clicks the generate button, our AI will generate a custom print and apply it to the 3D model of the garment for real-time viewing, which will lead to a purchase.
                         </p>                    
                     </div>
