--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">       
-        
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <!-- Vendor CSS Files -->
         <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -136,10 +136,9 @@
                     <div class="col-lg-8">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-6 lh-2 mb-3">Unique Print Designs Made Just For You.</h1>
-                            <p class=" fw-bold mb-5 textresponsive">XARIIA is the world's first AI-enabled print designer for fashion.<br>
-                                <br>
-                                XARIIA automates the custom print design process for garments by instantly generating designs based on each user's preferences and applying them to the customer's chosen garment.                            </p>
+                            <h1 class="display-6 lh-2 mb-3">Custom Fashion Simplified</h1>
+                            <p class=" fw-bold mb-5 textresponsive">XARIIA simplifies custom fashion by automating the custom print design process for clothing (lowering costs and improving UX), generating high-quality, style-consistent, trend-driven, unique, and custom print designs for the fashion industry.
+                            </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
                                 Our mission is to revolutionize custom fashion.<br>
@@ -394,7 +393,7 @@
                 <h2 class="display-6 lh-1 mb-4">How Does It Work ?</h2>
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
-                        <h2 class="display-6 lh-1 mb-4"> 1. Select A Garment</h2>
+                        <h2 class="display-6 lh-1 mb-4"> 1. Choose A Garment</h2>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Our platform will provide a wide variety of physical, digital, and phygital garments for the custom design to go on.
                         </p>                   
@@ -409,7 +408,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
-                        <h2 class="display-6 lh-1 mb-4">2. Select Design Preferences</h2>
+                        <h2 class="display-6 lh-1 mb-4">2. Choose Preferences</h2>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Following garment selection, the platform will direct the customer to a page where they can select the size (for physical garments) and the custom design preferences, such as trend and color, for the design to be based on.<br>
                         </p>
@@ -424,7 +423,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
-                        <h2 class="display-6 lh-1 mb-4">3. View Mockup & Purchase</h2>
+                        <h2 class="display-6 lh-1 mb-4">3.Generate, View & Purchase</h2>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             When the customer clicks the generate button, our AI will generate a custom print and apply it to the 3D model of the garment for real-time viewing, which will lead to a purchase.
                         </p>                    
@@ -439,11 +438,11 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-8">
-                        <h2 class="display-6 lh-1 mb-4">Products & Use Cases </h2>
+                        <h2 class="display-6 lh-1 mb-4">4.Use</h2>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            <span class="Textblue">Physical Garments</span>: Physically worn in real life as we will produce your chosen product based on your size and generated design. <br><br>
-                            <span class="Textblue">Digital Garments / NFT</span>: Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br><br>
-                            <span class="Textblue">Phygital Garments / NFT : Physically + Digitally.</span>
+                            <span class="Textblue">Physical Garments</span> Physical Garments: worn IRL as we will manufacture the selected product depending on the user's size and the generated print.<br><br>
+                            <span class="Textblue">Digital Garments / NFT</span> : Digital Garments / NFT: digitally worn IRL with XR goggles, AR social media filters as screen wear, in video games, and metaverse worlds as avatar fashion. <br><br>
+                            <span class="Textblue">Phygital Garments / NFT</span> : Physically + Digitally.
                         </p>    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-4">
@@ -465,29 +464,12 @@
                         </p>    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-4">
-                        <div class="px-sm-0"><img class=" img-fluid" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
+                        <div class="px-sm-0"><img class=" img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
                     </div>
                 </div>
         </section>
 
-        <!-- <section class="bg-light">
-            <div class="container px-5">
-                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-6">
-                        <h2 class="display-5 lh-1 mb-4">4. Purchase & Use</h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            The purchased product can be used in the following ways: <br>
-                            - Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
-                            - Digital Products : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br>
-                            - Phygital Products : Physically + Digitally.
-                        </p>                    
-                    </div>
-                    <div class="col-sm-10 col-md-8 col-lg-6">
-                        <div class="px-sm-0"><img class=" img-fluid" src="assets/usecase.png" alt="a t-shirt with a hawaian print" /></div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
+
 
         <!-- <section class="bg-light">
             <div class="container px-5">
