--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </header>
 
             <!-- Quote/testimonial aside-->
-            <aside class="text-center bg-gradient-primary-to-secondary">
+            <!-- <aside class="text-center bg-gradient-primary-to-secondary">
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-12">
@@ -246,7 +246,7 @@
                     </div>
                 </div>
             </div>
-        </aside>
+        </aside> -->
 
         <!-- App features section-->
         <section class="sectionfeatures">
