--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         <header class="masthead">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-8">
+                    <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-6 lh-2 mb-3">Custom Fashion Simplified</h1>
-                            <p class=" fw-bold mb-5 textresponsive">XARIIA simplifies custom fashion by automating the custom print design process for clothing (lowering costs and improving UX), generating high-quality, style-consistent, trend-driven, unique, and custom print designs for the fashion industry.
+                            <p class=" fw-bold mb-5 textresponsive">XARIIA simplifies custom fashion by automating the custom print design process for clothing (lowering costs and enhancing UX), generating high-quality, style-consistent, trend-driven, unique, and custom print designs for the fashion industry.
                             </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
@@ -250,55 +250,46 @@
         <!-- App features section-->
         <section class="sectionfeatures">
             <div class="container px-5">
-                <h2 class="display-6 lh-1 mb-4 textcenter">Features & Technology
+                <h2 class="display-6 lh-1 mb-4 textcenter">Custom Designs In Seconds
                 </h2>
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
                         <div class="container-fluid px-5">
                             <div class="row gx-5">
-                                <div class="col-md-6 mb-5 mb-md-0">
+                                <div class="col-md-4 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
-                                        <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
-                                        <h3 class="font-alt featurestext">Product Selector</h3>
-                                        <p class="fw-bold mb-0 textresponsive">A product selector that allows you to choose from a diverse selection of digital & phygital clothes for your custom print design to be applied to.
+                                        <img class="iconwidth" src="assets/fashion-design.png" alt="a white t-shirt with no print"  />
+                                        <h3 class="font-alt featurestext">Unique & Custom Prints</h3>
+                                        <p class="fw-bold mb-0 textresponsive">
+                                            Get high-quality, trend-driven, unique, and custom print designs generated for you based on your personal factors and design preferences.                                        
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-md-6 mb-5 mb-md-0">
+                                <div class="col-md-4 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
-                                        <h3 class="font-alt featurestext">Design Preference Selector
+                                        <h3 class="font-alt featurestext">Enhanced UX
                                         </h3>
-                                        <p class="fw-bold mb-0 textresponsive">A user interface that makes collecting your design preferences as simple as possible.
-                                        </p>
+                                        <p class="fw-bold mb-0 textresponsive">
+                                            A consumer platform that offers a unified user experience by utilizing a UI that simplifies the collection of design parameters and an interactive 3D model viewer of the garment that allows the consumer to see what they're purchasing.                                        </p>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 mb-5 mb-md-0">
+                                <div class="col-md-4 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
-                                        <h3 class="font-alt featurestext">Creative AI </h3>
+                                        <h3 class="font-alt featurestext">
+                                            Instant Prints & Reduced Costs
+                                        </h3>
                                         <p class="fw-bold mb-0 textresponsive">
-                                            A generative AI that instantly creates unique and distinctive designs for your chosen product based on your selected design preferences.
-                                        </p>
+                                            Our generative AI creates designs in seconds rather than hours, reducing costs and granting the user full ownership of the asset, making it ideal for designers, businesses, and consumers.                                        </p>
                                     </div>
                                 </div>
-                                <div class="col-md-6 mb-5 mb-md-0">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
-                                        <h3 class="font-alt featurestext">3D Mockup Generator</h3>
-                                        <p class="fw-bold mb-0 textresponsive">
-                                            A 3D product mockup generator that allows you to see the generated pattern design applied to your chosen product in real-time.                                       
-                                         </p>
-                                    </div>     
-                                </div>
                             </div>
-                    </div>
+                               
+                         </div>
 
                     <!-- <div class="col-lg-4 order-lg-0">
                         <div class="features-device-mockup">
@@ -392,7 +383,7 @@
                 <h2 class="display-6 lh-1 mb-4">How Does It Work ?</h2>
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
-                        <h2 class="display-6 lh-1 mb-4"> 1. Choose A Garment</h2>
+                        <h3 class="display-8 lh-1"> 1. Choose A Garment</h3>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Our platform will provide a wide variety of physical, digital, and phygital garments for the custom design to go on.
                         </p>                   
@@ -407,7 +398,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
-                        <h2 class="display-6 lh-1 mb-4">2. Choose Preferences</h2>
+                        <h3 class="display-8 lh-1 ">2. Choose Preferences</h3>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Following garment selection, the platform will direct the customer to a page where they can select the size (for physical garments) and the custom design preferences, such as trend and color, for the design to be based on.<br>
                         </p>
@@ -422,7 +413,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
-                        <h2 class="display-6 lh-1 mb-4">3.Generate, View & Purchase</h2>
+                        <h3 class="display-8 lh-1">3. Generate, View & Purchase</h3>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             When the customer clicks the generate button, our AI will generate a custom print and apply it to the 3D model of the garment for real-time viewing, which will lead to a purchase.
                         </p>                    
@@ -437,10 +428,10 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-8">
-                        <h2 class="display-6 lh-1 mb-4">4.Use</h2>
+                        <h3 class="display-8 lh-1">4. Use</h3>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            <span class="Textblue">Physical Garments</span> Physical Garments: worn IRL as we will manufacture the selected product depending on the user's size and the generated print.<br><br>
-                            <span class="Textblue">Digital Garments / NFT</span> : Digital Garments / NFT: digitally worn IRL with XR goggles, AR social media filters as screen wear, in video games, and metaverse worlds as avatar fashion. <br><br>
+                            <span class="Textblue">Physical Garments</span> : worn IRL as we will manufacture the selected product depending on the user's size and the generated print.<br><br>
+                            <span class="Textblue">Digital Garments / NFT</span> : digitally worn IRL with XR goggles, AR social media filters as screen wear, in video games, and metaverse worlds as avatar fashion. <br><br>
                             <span class="Textblue">Phygital Garments / NFT</span> : Physically + Digitally.
                         </p>    
                     </div>
@@ -455,11 +446,11 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-8">
-                        <h2 class="display-6 lh-1 mb-4">XARIIA's Generative AI caters To:                        </h2>
+                        <h2 class="display-6 lh-1 mb-4">For Who ?</h2>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             <span class="Textblue">Fashion Designers & Houses</span>: by providing monthly print-generation packages that allow customers to generate and download custom prints for their own use throw a panel on our platform.<br><br>
-                            <span class="Textblue">Consumers</span>: by generating and applying custom prints to the (physical, digital, and phygital) garments sold on our online platform.<br><br>
-                            <span class="Textblue">Fashion Businesses</span>: by integrating our AI (as an API) into the online platforms of other fashion businesses and generating custom prints for their garments.
+                            <span class="Textblue">Businesses</span>: by integrating our AI (as an API) into the online platforms of other businesses and generating custom prints for their products.<br><br>
+                            <span class="Textblue">Consumers</span>: by generating and applying custom prints to the (physical, digital, and phygital) garments sold on our online platform.
                         </p>    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-4">
