--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                     <div class="col-12 col-lg-8">
                         <h3 class="display-8 lh-1">4. Use</h3>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            <span class="Textblue">Physical Garments</span> : worn IRL as we will manufacture the selected product depending on the user's size and the generated print.<br><br>
-                            <span class="Textblue">Digital Garments / NFT</span> : digitally worn IRL with XR goggles, AR social media filters as screen wear, in video games, and metaverse worlds as avatar fashion. <br><br>
+                            <span class="Textblue">Physical Garments</span> : Worn IRL as we will manufacture the selected product depending on the user's size and the generated print.<br><br>
+                            <span class="Textblue">Digital Garments / NFT</span> : Digitally worn IRL with XR goggles, AR social media filters as screen wear, in video games, and metaverse worlds as avatar fashion. <br><br>
                             <span class="Textblue">Phygital Garments / NFT</span> : Physically + Digitally.
                         </p>    
                     </div>
